--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
       name: 'Unity Project Validation'
       run: |
         Write-Host "Unity Project Validation"
-        $versionFile = "${{ '**/ProjectSettings/ProjectVersion.txt' }}"
+        $versionFile =  Get-Content -Path "${{ '**/ProjectSettings/ProjectVersion.txt' }}"
         $modulesString = "${{ inputs.modules }}"
         $modules = $modulesString.Split(" ")
 
@@ -31,6 +31,11 @@ runs:
         $projectPath = (Get-Item $versionFile).Directory.Parent.FullName
         Write-Host "Unity project path: `"$projectPath`""
         Write-Host "::set-output name=project-path::$projectPath"
+
+        $pattern = '(?<version>(?:(?<major>\d+)\.)?(?:(?<minor>\d+)\.)?(?:(?<patch>\d+[fab]\d+)\b))|((?:\((?<revision>\w+))\))'
+        $matches = $matches = [regex]::Matches($version, $pattern)
+        $unityVersion = $matches[1].Groups['version'].Value.Trim()
+        $unityVersionChangeSet = $matches[2].Groups['revision'].Value.Trim()
 
         if ( (-not $global:PSVersionTable.Platform) -or ($global:PSVersionTable.Platform -eq "Win32NT") ) {
           $hubPath = "C:\Program Files\Unity Hub\Unity Hub.exe"
