--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
       name: 'Unity Project Validation'
       run: |
         Write-Host "Unity Project Validation"
-        $versionFile = "${{ '**/ProjectSettings/ProjectVersion.txt' }}"
+        $versionFile = Get-ChildItem -Filter '*/ProjectSettings/ProjectVersion.txt' | Select-Object -First 1
         $modulesString = "${{ inputs.modules }}"
         $modules = $modulesString.Split(" ")
 
@@ -32,6 +32,7 @@ runs:
         Write-Host "Unity project path: `"$projectPath`""
         Write-Host "::set-output name=project-path::$projectPath"
 
+        $version = Get-Content $versionFile
         $pattern = '(?<version>(?:(?<major>\d+)\.)?(?:(?<minor>\d+)\.)?(?:(?<patch>\d+[fab]\d+)\b))|((?:\((?<revision>\w+))\))'
         $matches = $matches = [regex]::Matches($version, $pattern)
         $unityVersion = $matches[1].Groups['version'].Value.Trim()
