--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ runs:
       name: 'Unity Project Validation'
       run: |
         Write-Host "Unity Project Validation"
-        $versionFile = "${{ '/**/ProjectSettings/ProjectVersion.txt' }}"
+        $versionFile = "${{ '**/*ProjectSettings/ProjectVersion.txt' }}"
         $modulesString = "${{ inputs.modules }}"
         $modules = $modulesString.Split(" ")
 
