--- a/action.yml
+++ b/action.yml
@@ -159,17 +159,19 @@ runs:
           Write-Host "Installing $unityVersion ($unityVersionChangeSet)..."
           $installArgs = @('install',"--version $unityVersion","--changeset $unityVersionChangeSet",'--cm')
 
+          $addModules = @()
+
+          foreach ($module in $modules ) {
+            if ( $module -eq 'android' ) {
+              $addmodules += 'android-open-jdk'
+              $addmodules += 'android-sdk-ndk-tools'
+          }
+
+          $modules += $addModules
+
           foreach ( $module in $modules ) {
             $installArgs += '-m'
             $installArgs += $module
-
-            if ( $module -eq 'android' ) {
-              $installArgs += '-m'
-              $installArgs += 'android-open-jdk'
-              $installArgs += '-m'
-              $installArgs += 'android-sdk-ndk-tools'
-            }
-
             Write-Host "  with module: $module"
           }
 
