--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
       - name: checkout test project
         uses: actions/checkout@v3
         with:
-          repository: xrtk/com.xrtk.test
+          repository: xrtk/com.xrtk.com
           path: test-project
 
       - id: unity-validate
